gcc/testsuite/gdc.test/compilable/imports/c314.d
module imports.c314;

void bug(string s)
{}
