gcc/testsuite/gdc.test/fail_compilation/imports/b313.d
module imports.b313;

void bug()
{}
